--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,12 @@ p {
 	text-align: center;
 	color: #777;
 }
+
+button {
+	display: block;
+	width: 50px;
+	height: 30px;
+}
 /** Start Coding Here **/
 
 /**
