--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ ul li.selected a {
 }
 
 select {
-	width: 94%;
+	width: 30%;
 	margin: 11px  0 11px 2%;
 	float: left;
 }
@@ -58,8 +58,10 @@ p {
 
 button {
 	display: block;
+	float: left;
 	width: 50px;
-	height: 30px;
+	height: 20px;
+	margin: 11px 5px;
 }
 /** Start Coding Here **/
 
@@ -67,3 +69,16 @@ button {
 Modify CSS to hide links on small width and show button and select
 Also hides select and button on larger width and show's links
 **/
+
+@media screen and (max-width: 568px) {
+	#menu ul {
+		display: none;
+	}
+}
+
+@media screen and (min-width: 568px) {
+	#menu select,
+	#menu button {
+		display: none;
+	}
+}
